add_subdirectory(emcsfc_ice_blend.fd)
add_subdirectory(emcsfc_snow2mdl.fd)
if (OpenMP_FOUND)
  add_subdirectory(global_chgres.fd)
  add_subdirectory(global_cycle.fd)
else()
  message(STATUS "OpenMP is required for global_chgres.fd and was NOT found, skipping ...")
  message(STATUS "OpenMP is required for global_cycle.fd and was NOT found, skipping ...")
endif()
